--- a/templates/api.html
+++ b/templates/api.html
@@ -62,7 +62,7 @@
                             <a class="nav-link" href="/api">API</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="https://github.com/crackhub-dev/movie-script" target="_blank">GitHub</a>
+                            <!-- <a class="nav-link" href="https://github.com/crackhub-dev/movie-script" target="_blank">GitHub</a> -->
                         </li>
 
                     </ul>
