--- a/templates/view_tv.html
+++ b/templates/view_tv.html
@@ -190,7 +190,7 @@
 
             <!-- Video Player -->
             <div class="video-container">
-                <iframe src="https://www.vidsrc.me/embed/tv/{{ id }}/{{ s }}-{{ e }}" frameborder="0"
+                <iframe src="https://www.vidjoy.pro/embed/tv/{{ id }}/{{ s }}-{{ e }}" frameborder="0"
                     allowfullscreen="true" width="100%" height="600px" class="movie">
                 </iframe>
             </div>
