--- a/templates/view_tv.html
+++ b/templates/view_tv.html
@@ -187,10 +187,9 @@
                 </div>
                 <p class="lead">{{ overview }}</p>
             </div>
-<h1>https://www.vidjoy.pro/embed/tv/{{ id }}/{{ s }}-{{ e }}</h1>
             <!-- Video Player -->
             <div class="video-container">
-                <iframe src="https://www.vidjoy.pro/embed/tv/{{ id }}/{{ s }}-{{ e }}" frameborder="0"
+                <iframe src="https://vidjoy.pro/embed/tv/{{ id }}/{{ s }}/{{ e }}" frameborder="0"
                     allowfullscreen="true" width="100%" height="600px" class="movie">
                 </iframe>
             </div>
