--- a/templates/movie.html
+++ b/templates/movie.html
@@ -242,7 +242,7 @@
             {% if vidsrc_playable %}
             <!-- VidSrc Player -->
             <div id="vidsrc-player">
-                <iframe src="https://vidsrc.net/embed/movie/{{ tmdb_id }}" frameborder="0" allowfullscreen="true"
+                <iframe src="https://vidjoy.pro/embed/movie/{{ tmdb_id }}" frameborder="0" allowfullscreen="true"
                     width="100%" height="600px" class="movie">
                 </iframe>
             </div>
